# sighthouse

./: .gitlab-ci.yml  Makefile  pyproject.toml
.github/workflows/: ci.yml
doc/: Makefile
doc/docs/frontend/: quickstart.md
doc/docs/signature-pipeline/: quickstart.md
docker/docker-bsim-elasticsearch/: create-db.docker  elastic_bsim.dockerfile
docker/docker-bsim-postgres/: Dockerfile
docker/docker-ghidra/: Dockerfile
docker/docker-ghidra-python3/: Dockerfile  publish.sh
docker/docker-sighthouse/: Dockerfile.frontend  Dockerfile.pipeline  Dockerfile.sighthouse
docker/frontend/: start.sh
sighthouse-cli/: pyproject.toml
sighthouse-client/: pyproject.toml
sighthouse-core/: pyproject.toml
sighthouse-core/src/sighthouse/core/utils/: api.py  database.py
sighthouse-frontend/: pyproject.toml
sighthouse-frontend/src/sighthouse/frontend/: cli.py  database.py  restapi.py  runner.py
sighthouse-frontend/src/sighthouse/frontend/ghidrascripts/: SightHouseFrontendScript.java
sighthouse-pipeline/: pyproject.toml
