[project]
name = "sighthouse.client"
description = "Client sighthouse functionality"
authors = [
  {name="Benoît FORGETTE aka MadSquirrel"},
  {name="Sami BABIGEON aka Fenrisfulsur"}
]

license = {file="LICENSE"}
version = "1.0.4"
requires-python = ">= 3.11"
dependencies = [
  "sighthouse-cli>=1.0.4",
  "requests"
]

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
