[project]
name = "sighthouse.pipeline"
description = "Pipeline sighthouse functionality"
authors = [
  {name="Benoît FORGETTE aka MadSquirrel"},
  {name="Sami BABIGEON aka Fenrisfulsur"}
]

license = {file="LICENSE"}
version = "1.0.4"
requires-python = ">= 3.11"
dependencies = [
  "celery>=5.5.3", # frontend/pipeline
  "redis>=6.3.0", # nowhere??
  "pyaml>=25.7.0",
  "sighthouse-core>=1.0.4"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.txt", "**/*.java", "package.yml"]

[tool.black]
line-length = 100

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
